# aurora

./: Cargo.toml  README.md  package-lock.json  package.json
aurora-backtester/: Cargo.toml  README.md
aurora-backtester/src/: engine.rs  lib.rs  main.rs  portfolio.rs  pricing_mode.rs  result.rs  time_utils.rs  vectorized_engine.rs  visualizer.rs
aurora-backtester/src/visualizer/: charts.rs  report.rs
aurora-backtester/tests/: integration_tests.rs
aurora-config/: Cargo.toml  README.md
aurora-config/src/: error.rs  lib.rs  loader.rs  types.rs
aurora-config/src/loader/: tests.rs
aurora-config/src/types/: tests.rs
aurora-config/tests/: integration_tests.rs
aurora-core/: Cargo.toml  README.md
aurora-core/src/: lib.rs
aurora-core/tests/: integration_tests.rs
aurora-data/: Cargo.toml  README.md
aurora-data/src/: historical.rs  lib.rs  live.rs  loader.rs  main.rs
aurora-data/src/historical/: downloader.rs  mod.rs  types.rs  utils.rs
aurora-data/src/historical/downloader/: tests.rs
aurora-data/src/live/: mod.rs  stream.rs  utils.rs
aurora-data/src/live/stream/: tests.rs
aurora-data/tests/: integration_tests.rs
aurora-front/: DEVELOPMENT_GUIDE.md  PROJECT_STRUCTURE.md  README.md  TEST_COVERAGE_REPORT.md  UPDATE_LOG.md  jest.config.ts  jest.setup.ts  next.config.ts  package-lock.json  package.json  test-output.txt  前端项目约定.md
aurora-front/docs/: API_404_FIX_GUIDE.md  API_CONFIGURATION.md  API_INTEGRATION_SUMMARY.md  API_USAGE_GUIDE.md  BACKTEST_FIX_SUMMARY.md  BACKTEST_PERFORMANCE_ASYNC_FIX.md  BACKTEST_PROGRESS_FIX.md  BACKTEST_WEBSOCKET_FIX.md  CHART_ANALYSIS_IMPLEMENTATION.md  CHART_ERRORS_FIX.md  CONFIG_UPDATE_SUMMARY.md  DATA_DOWNLOAD_IMPLEMENTATION.md  DATA_PAGE_FIX_SUMMARY.md  DATA_TYPES_AND_STATE_MANAGEMENT.md  IMPLEMENTATION_SUMMARY.md  PRICING_MODE_EXAMPLES.ts  PRICING_MODE_IMPLEMENTATION.md  PRICING_MODE_USER_GUIDE.md  PROGRESS_PANEL_AND_RECONNECT_FIX.md  QUICK_REFERENCE.md  QUICK_START.md  REACT_STRICT_MODE_FIX.md  STACK_OVERFLOW_FIX.md  TEST_FIX_REPORT.md  TIMEZONE_FIX_SUMMARY.md  TIMEZONE_IMPLEMENTATION.md  WEBSOCKET_CONNECTION_FIX.md  WEBSOCKET_FIX.md  WEBSOCKET_RECONNECTION_FIX.md  WEBSOCKET_RECONNECT_FIX.md
aurora-front/src/__mocks__/: lightweight-charts.ts
aurora-front/src/app/: globals.css  layout.tsx  page.test.tsx  page.tsx
aurora-front/src/app/backtest/: page-fix.test.tsx  page.test.tsx  page.tsx
aurora-front/src/app/data/: page.tsx  (+1 more)
aurora-front/src/constants/: index.test.ts  index.ts
aurora-front/src/lib/: utils.test.ts
aurora-front/src/types/: api.test.ts  api.ts  config-schema.test.ts  config-schema.ts  index.test.ts  index.ts  schemas.test.ts  schemas.ts  strategy-types.test.ts  strategy-types.ts  validators.test.ts  validators.ts
aurora-indicators/: Cargo.toml  README.md
aurora-indicators/src/: adline.rs  adx.rs  atr.rs  bollinger.rs  cci.rs  cmf.rs  ema.rs  ichimoku.rs  keltner.rs  lib.rs  ma.rs  macd.rs  mfi.rs  obv.rs  psar.rs  roc.rs  rsi.rs  stddev.rs  stochastic.rs  vwap.rs  williams_r.rs
aurora-indicators/src/adline/: tests.rs
aurora-indicators/src/adx/: tests.rs
aurora-indicators/src/atr/: tests.rs
aurora-indicators/src/bollinger/: tests.rs
aurora-indicators/src/cci/: tests.rs
aurora-indicators/src/cmf/: tests.rs
aurora-indicators/src/ema/: tests.rs
aurora-indicators/src/ichimoku/: tests.rs
aurora-indicators/src/keltner/: tests.rs
aurora-indicators/src/ma/: tests.rs
aurora-indicators/src/macd/: tests.rs
aurora-indicators/src/mfi/: tests.rs
aurora-indicators/src/obv/: tests.rs
aurora-indicators/src/psar/: tests.rs
aurora-indicators/src/roc/: tests.rs
aurora-indicators/src/rsi/: tests.rs
aurora-indicators/src/stddev/: tests.rs
aurora-indicators/src/stochastic/: tests.rs
aurora-indicators/src/vwap/: tests.rs
aurora-indicators/src/williams_r/: tests.rs
aurora-indicators/tests/: integration_tests.rs
aurora-live/: Cargo.toml  README.md
aurora-live/src/: engine.rs  lib.rs  main.rs  paper_trader.rs
aurora-live/tests/: integration_tests.rs
aurora-portfolio/: Cargo.toml  README.md
aurora-portfolio/src/: analytics.rs  broker.rs  fees.rs  lib.rs  order.rs  order_book.rs  paper_broker.rs  portfolio.rs  position_manager.rs  risk_manager.rs  trade.rs
aurora-portfolio/src/broker/: tests.rs
aurora-portfolio/src/fees/: tests.rs
aurora-portfolio/src/order/: tests.rs
aurora-portfolio/src/order_book/: tests.rs
aurora-portfolio/src/paper_broker/: tests.rs
aurora-portfolio/src/portfolio/: tests.rs
aurora-portfolio/src/position_manager/: tests.rs
aurora-portfolio/src/risk_manager/: tests.rs
aurora-portfolio/tests/: integration_tests.rs
aurora-strategy/: Cargo.toml  README.md
aurora-strategy/src/: lib.rs
aurora-strategy/tests/: integration_tests.rs
aurora-web/: CHANGELOG_20251023.md  Cargo.toml  FIX_COMPLETED_REPORT.md  README.md
aurora-web/configs/: backtest_bidask_config.toml  backtest_bidask_config_2.toml
aurora-web/data/: binance_btcusdt_1h_20250101_to_20251021.csv
aurora-web/src/: error.rs  lib.rs  main.rs
aurora-web/src/api/: backtest.rs  config.rs  dashboard.rs  data.rs  mod.rs
aurora-web/src/models/: mod.rs  request.rs  response.rs
aurora-web/src/state/: backtest.rs  download.rs  mod.rs
aurora-web/src/ws/: backtest.rs  data.rs  mod.rs
aurora-web/static/: index.html  test.html
aurora-web/static/css/: style.css
aurora-web/static/js/: app.js  backtest.js  chart-sync.js  charts.js  config.js  data.js  tradingview.js
aurora-web/test_configs/: test.toml  test_timezone_shanghai.toml  test_timezone_utc.toml
aurora-web/tests/: integration_tests.rs
docs/: BENCHMARK_CONFIG_FIX.md  BENCHMARK_CONFIG_IMPLEMENTATION.md  TIME_RANGE_FILTERING_IMPLEMENTATION.md  大纲.md  技术方案说明书.md  指标实现完整总结.md  指标快速参考.md  新增指标实现总结.md  新增指标总结.md  软件需求规格说明书.md  配置管理实现总结.md  配置管理风险支持更新.md  项目约定.md  风险管理实现总结.md  风险管理配置未生效问题分析.md
examples/: backtest_bidask_config.toml  backtest_config.toml  backtest_with_benchmark_config.toml  backtest_without_benchmark_config.toml  backtester_new_features.rs  complete_config.toml  live_config.toml  strict_risk_config.toml
(+114 files in other folders)
