[package]
name = "aurora-backtester"
version = "0.1.0"
edition = "2024"

[lib]
name = "aurora_backtester"
path = "src/lib.rs"

[dependencies]
aurora-core = { path = "../aurora-core" }
aurora-strategy = { path = "../aurora-strategy" }
aurora-portfolio = { path = "../aurora-portfolio" }
aurora-config = { path = "../aurora-config", features = ["portfolio-integration"] }
csv = "1.3"
clap = { version = "4.4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }

[features]
portfolio-integration = []

[dev-dependencies]
tempfile = "3.0"
tokio-test = "0.4"
