[package]
name = "aurora-core"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
async-trait = "0.1"
anyhow = "1.0"
tokio = { version = "1.0", features = ["sync"] }

[dev-dependencies]
tokio-test = "0.4"
tokio = { version = "1.0", features = ["full", "macros"] }
serde_json = "1.0"
