[package]
name = "aurora-data"
version = "0.1.0"
edition = "2024"

[dependencies]
aurora-core = { path = "../aurora-core" }
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
tokio-tungstenite = "0.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"
clap = { version = "4.4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
futures-util = "0.3"
async-trait = "0.1"
approx = "0.5"
