[package]
name = "aurora-live"
version = "0.1.0"
edition = "2024"

[lib]
name = "aurora_live"
path = "src/lib.rs"

[dependencies]
aurora-core = { path = "../aurora-core" }
aurora-strategy = { path = "../aurora-strategy" }
aurora-portfolio = { path = "../aurora-portfolio" }
aurora-config = { path = "../aurora-config" }
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
futures-util = "0.3"
serde_json = "1.0"
