[package]
name = "aurora-web"
version = "0.1.0"
edition = "2021"
authors = ["blingbling21"]
license = "Apache-2.0"
description = "Web interface for Aurora quantitative trading framework"
repository = "https://github.com/blingbling21/aurora"

[[bin]]
name = "aurora-web"
path = "src/main.rs"

[dependencies]
# Web框架
axum = { version = "0.8", features = ["ws", "macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "cors", "trace"] }

# 异步运行时
tokio = { version = "1.41", features = ["full"] }
futures-util = "0.3"

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Aurora依赖
aurora-core = { path = "../aurora-core" }
aurora-config = { path = "../aurora-config" }
aurora-backtester = { path = "../aurora-backtester" }
aurora-strategy = { path = "../aurora-strategy" }
aurora-portfolio = { path = "../aurora-portfolio" }
aurora-data = { path = "../aurora-data" }

# 错误处理
anyhow = "1.0"
thiserror = "2.0"

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# 时间处理
chrono = { version = "0.4", features = ["serde"] }

# UUID生成
uuid = { version = "1.11", features = ["v4", "serde"] }

# CSV处理
csv = "1.3"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
